--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "onnxruntime-gpu>=1.23.2", 
     "pandas>=2.2.2", 
     "pillow>=11.0.0", 
+    "pyyaml>=6.0.3",
     "opencv-python>=4.12.0.88", 
     "tqdm>=4.66.5",
 ]
